/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-03-26 14:03:40
 */

syntax = "proto3";

package message.room_chat;
option go_package = "/message/room_chat";

// 接收请求
message ReceiveRequest {
}

// 接收回复
message ReceiveReply {
  string userId = 1; // 用户 id
}

// 点对点聊天
service RoomChat {
  // 接收
  rpc Receive(ReceiveRequest) returns(stream ReceiveReply);
}
