/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-03-07 23:31:57
 */

syntax = "proto3";

import "pkg/rpc/message/chat/source.proto";
import "pkg/rpc/message/content/text.proto";
import "pkg/rpc/message/content/sticker.proto";
import "pkg/rpc/message/content/quoted.proto";
import "pkg/rpc/message/content/image.proto";
import "pkg/rpc/message/content/audio.proto";
import "pkg/rpc/message/content/video.proto";
import "pkg/rpc/message/content/file.proto";
import "pkg/rpc/message/content/location.proto";
import "pkg/rpc/message/content/card.proto";
import "pkg/rpc/message/content/withdraw.proto";
import "pkg/rpc/message/content/voice.proto";
import "pkg/rpc/message/content/voice_call.proto";
import "pkg/rpc/message/content/video_call.proto";

package pkg.rpc.message.chat;
option go_package = "pkg/rpc/message/chat";

// 聊天内容
message Content {
  oneof Type {
    content.Text text = 10; // 文字
    content.Sticker sticker = 11; // 表情包
    content.Quoted quoted = 12; // 引用
    content.Image image = 13; // 图片
    content.Audio audio = 14; // 音频
    content.Video video = 15; // 视频
    content.File file = 16; // 文件
    content.Location location = 17; // 定位
    content.Card card = 18; // 卡片
    content.Withdraw withdraw = 19; // 撤回
    content.Voice voice = 20; // 语音信息
    content.VoiceCall voiceCall = 21; // 语音通话
    content.VideoCall videoCall = 22; // 视频通话
  }
}

// 发送请求
message ToRequest {
  Source source = 1; // 来源
  Content content = 2; // 内容
}

// 发送回复
message ToReply {
  int32 sequenceId = 1; // 序号

  // 状态
  enum Status {
    SENT = 0; // 已发送
    REJECT = 22; // 拒收
  }

  Status status = 3; // 状态
  string comment = 4; // 备注
}

// 订阅请求
message SubscribeRequest {
}

// 订阅回复
message SubscribeReply {
  Source source = 1; // 来源
  Content content = 2; // 内容
}

// 聊天
service Chat {
  // 发送
  rpc To(ToRequest) returns(ToReply);
  // 订阅
  rpc Subscribe(SubscribeRequest) returns(stream SubscribeReply);
}