/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-03-26 13:59:16
 */

syntax = "proto3";

package pkg.rpc.proto.bottle_chat;
option go_package = "pkg/rpc/proto/bottle_chat";

// 订阅请求
message SubscribeRequest {
}

// 订阅回复
message SubscribeReply {
  string userId = 1; // 用户 id
}

// 点对点聊天
service BottleChat {
  // 订阅
  rpc Subscribe(SubscribeRequest) returns(stream SubscribeReply);
}
