/*
 * Copyright © 2024 honeysense.com All rights reserved.
 * Author: sunrui
 * Date: 2024-03-26 13:47:26
 */

syntax = "proto3";

import "pkg/rpc/proto/group_chat/online.proto";
import "pkg/rpc/proto/group_chat/offline.proto";
import "pkg/rpc/proto/group_chat/join.proto";
import "pkg/rpc/proto/group_chat/leave.proto";
import "pkg/rpc/proto/group_chat/mute.proto";
import "pkg/rpc/proto/group_chat/unmute.proto";

package pkg.rpc.proto.group_chat;
option go_package = "pkg/rpc/proto/group_chat";

// 订阅请求
message SubscribeRequest {
}

// 订阅回复
message SubscribeReply {
  string userId = 1; // 用户 id

  oneof Type {
    Online online = 6; // 上线
    Offline offline = 7; // 下线

    Join join = 2; // 加入
    Leave leave = 3; // 离开

    Mute mute = 4; // 禁言
    Unmute unmute = 5; // 解除禁言
  }
}

// 点对点聊天
service GroupChat {
  // 订阅
  rpc Subscribe(SubscribeRequest) returns(stream SubscribeReply);
}